# cryption

./: ALGORITHM.md  Cargo.toml  DESIGN.md  PHASES.md  README.md  test_output.txt
src/: engine.rs  error.rs  file_handler.rs  format.rs  gui.rs  lib.rs  main.rs  manager.rs  vault.rs
tests/: security_tests.rs
