[package]
name = "cryption"
version = "0.1.0"
edition = "2024"

[dependencies]
# For wiping keys and the matrix from RAM after use
zeroize = { version = "1.7", features = ["derive"] }
# For industry-standard key stretching (Argon2id)
argon2 = "0.5"
# For integrity checks
sha2 = "0.10"
hmac = "0.12"
rand = { version = "0.8", features = ["getrandom"] }
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22.1"
iced = "0.14.0"
